// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionsReducer Selectors selectId should return session 1`] = `
Object {
  "sessionID": "2",
}
`;

exports[`SessionsReducer undefined action should return the default state 1`] = `
Object {
  "session": Object {
    "sessionID": "2",
  },
}
`;
